# Learning-Actix

./: .env  Cargo.toml  diesel.toml  docker-compose.yml  page.json
migrations/: 2024_03_create_users.sql
migrations/TIMESTAMP_create_users/: up.sql
src/: api_docs.rs  db.rs  main.rs  main_module.rs  schema.rs
src/application/: ip_address_service.rs
src/bootstrap/database/: connection.rs
src/controllers/: mod.rs  page_controller.rs  person_controller.rs  sample_controller.rs
src/data/: ip_addresses.json  page.json  people.json
src/domain/: domain_module.rs  mod.rs  module.rs
src/domain/controllers/: user_controller.rs
src/domain/models/: user.rs
src/domain/page/: mod.rs  page_controller.rs  page_service.rs  page_struct.rs
src/domain/person/: mod.rs  person_controller.rs  person_service.rs
src/domain/services/: user_service.rs
src/migrations/[timestamp]_create_posts/: up.sql
src/migrations/[timestamp]_create_tables/: down.sql  up.sql
src/models/: ip_address_struct.rs  mod.rs  page_struct.rs  person_struct.rs
src/schema/: ip_addresses.rs  mod.rs  pages.rs  persons.rs
src/services/: file_manager.rs  ip_address_service.rs  mod.rs  page_service.rs  person_service.rs
