[package]
name = "test_proj"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "3.0.0" 
actix-cors = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.diesel_migrations]
version = "2.1.0"
