[package]
name = "test_proj"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv='0.15'
serde = {version = "1.0.197",features = ["derive"]}
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.10"
chrono = { version = "0.4", features = ["serde"] }
